judge imports correct

--- a/STSEval/management/templates/management/judge_list_upload_form.html
+++ b/STSEval/management/templates/management/judge_list_upload_form.html
@@ -2,7 +2,7 @@
 <form id="form_upload" action="/management/judge_list_upload/" method="post" enctype="multipart/form-data">
     {% csrf_token %}
     <div>You can upload a excel document (.xlsx) or CSV file to populate the judges.<br/>This will overwrite your current judges.<br/>Passwords that are left blank will be auto generated<br/><br/>
-    <a href="{% static 'app/example_judge_import.xlsx' %}">Click here to download a sample excel sheet</a>
+    <a href="{% static 'app/' %}{{example_file}}.xlsx">Click here to download a sample excel sheet</a>
     <br/><br/>
     </div>
         File<br/>
