paymnets on small phone fix

--- a/STSEval/account/templates/account/stripe_payment_screen.html
+++ b/STSEval/account/templates/account/stripe_payment_screen.html
@@ -1,7 +1,7 @@
 <div align="center"> 
    {{message}}
 
-    <div class="payment-container">
+    <div class="payment-container-popup">
         <table cellpadding="2" cellspacing="0">
             <tr>
                 <td>Your credit and debit cards</td>
