minor fixes and team scoring decimals

--- a/STSEval/app/templates/app/d2_wag.html
+++ b/STSEval/app/templates/app/d2_wag.html
@@ -145,8 +145,8 @@
 
                     Status = doc.data().status;
                     if (BackupVideo != -1) {
-                        document.getElementById("video-playback").pause();
-                        document.getElementById("video-playback").currentTime = 0;
+                        //document.getElementById("video-playback").pause();
+                        //document.getElementById("video-playback").currentTime = 0;
                     }
                 }
                 if (doc.data().status == "RD") {
