--- a/STSEval/management/templates/management/setup_finish.html
+++ b/STSEval/management/templates/management/setup_finish.html
@@ -75,7 +75,7 @@
             <a href="/account/stripe_connect_account/{{id}}"><button id="btnSetupAccount" type="button" class="btn btn-main btn-long mt-2">Setup Stripe Account</button></a>
         {% endif %}
     {% endif %}
-   
+     If there are first time participants, testing with them is <b>required</b>. <a href="/management/setup_testing/">How to test</a><br/>
      <button id="btnSessionManagement" type="button" class="btn-main btn-wide pt-4 pb-4" style="border-radius: 1rem;{% if not session_active %}display:none{% endif %}" onclick="btnSessionManagementClick()">Session<br/>Management</button>
     <br/>
     <br/>
