--- a/STSEval/management/templates/management/setup_testing.html
+++ b/STSEval/management/templates/management/setup_testing.html
@@ -21,7 +21,7 @@
                 There is one test competition for MAG. FX through VT use 1 D Judge and 2 E Judges.  PB and HB have 2 D judges and 2 E Judges.<br/>
                 There are two separate teams, one starts on FX and one starts on PB.<br/>
                 <a href="{% static 'app/MAGTestLogins.xlsx' %}">Download full login list</a><br/>
-                <a href="/overview/11/"><button id="btnSessionManagement" type="button" class="btn btn-main">Session Overview</button></a><br/>
+                <a href="/overview/11/FX"><button id="btnSessionManagement" type="button" class="btn btn-main">Session Overview</button></a><br/>
             </span><br/>
         </div>
         <div class="col-3 pr-4" align="right">
@@ -31,7 +31,7 @@
             <span>
                 Blah<br/>
                 <a href="{% static 'app/WAGTestLogins.xlsx' %}">Download full login list</a><br/>
-                <a href="/overview/11/"><button id="btnSessionManagement" type="button" class="btn btn-main">Session Overview</button></a><br/>
+                <a href="/overview/11/VT"><button id="btnSessionManagement" type="button" class="btn btn-main">Session Overview</button></a><br/>
             </span><br/>
         </div>
     </div>
