--- a/STSEval/account/templates/account/stripe_payment_screen.html
+++ b/STSEval/account/templates/account/stripe_payment_screen.html
@@ -29,6 +29,7 @@
         </div>
         <button id="btnPayNow" class="payment-button" onclick="PayClick()">${{total}} Pay Now</button>
     </div>
+    <div style="font-size:.8rem">NOTE: Viewable camera uptime depends on the gyms involved.  You may have large gaps in the viewing experience.</div>
     <!-- We'll put the error messages in this element -->
     <div id="card-errors" role="alert" class="errorlist"></div>
 </div>
